--- a/config/IndustrialRenewal.cfg
+++ b/config/IndustrialRenewal.cfg
@@ -1,19 +1,122 @@
 # Configuration file
 
+general {
+
+    ##########################################################################################################
+    # main
+    #--------------------------------------------------------------------------------------------------------#
+    # Main
+    ##########################################################################################################
+
+    main {
+        # The volume of the alarm (Default 4.0)
+        D:alarmVolume=4.0
+
+        # The capacity of the barrel (Default 64000)
+        I:barrelCapacity=64000
+
+        # The capacity of the Battery Bank (Default 1000000)
+        I:batteryBankCapacity=1000000
+
+        # The Max Input of the Battery Bank (Default 10240)
+        I:batteryBankMaxInput=10240
+
+        # The Max Output of the Battery Bank (Default 10240)
+        I:batteryBankMaxOutput=10240
+
+        # Width/length of chunks to be loaded, it is recommend this is an odd number
+        I:chunkLoaderWidth=3
+
+        # The amount of damage the fence would cause (Default 2.0 '1 heart')
+        D:electricFenceDamageAmount=2.0
+
+        # The amount of knockback the fence would cause (Default 0.3)
+        D:electricFenceKnockBack=0.3
+
+        # '0': Do damage only to monsters and only knockback players. '1': Do damage to monsters and player. '2': do only knockback to all living things. '3': do damage to all living things. '4': normal fence (Default 0)
+        I:electricFenceMode=0
+
+        # Disables Chunk loading, use if there is a crash happening in a chunk loaded area
+        B:emergencyMode=false
+
+        # If player can use fire extinguisher on nether lava (Default true)
+        B:fireExtinguisheronNether=true
+
+        # The capacity of the Fluid Container Cart (Default 64000)
+        I:fluidCartCapacity=64000
+
+        # The number of hours the player will be offline before deactivating (default 2 days)
+        I:hoursBeforeDeactivation=48
+
+        # The time in miliseconds the medkit will regenerate players hearth (Default 150)
+        I:medKitEffectDuration=150
+
+        # If pumps will not consume the water (Default true)
+        B:pumpInfinityWater=true
+
+        # Turn On/Off the manual item on first spawn (Default true) (WIP not working yet)
+        B:startWithManual=true
+
+        # The factor steam will be generated ez: 1 Water : 10 Steam (note: real life is 1700) (Default 10)
+        I:steamBoilerConvertionFactor=10
+
+        # '0': Celsius '1': Fahrenheit '2': Kelvin (Default 0)
+        I:temperatureScale=0
+
+        ##########################################################################################################
+        # fluidfuel
+        #--------------------------------------------------------------------------------------------------------#
+        # Fluid fuels and its combustion value per 1 Bucket (Default: {lava=200, rocket_fuel=1120, pyrotheum=3200, refined_fuel=1500, ic2biogas=300, crude_oil=500, refined_oil=1000, coal=400, refined_biofuel=900, bio_diesel=600, biodiesel=600, diesel=900, fuel=1500, fluiddiesel=900, fluidnitrodiesel=1600, empoweredoil=700, kerosene=1500, lpg=1800, gasoline=1200, fire_water=1200, ethanol=900, bio.ethanol=900})
+        ##########################################################################################################
+
+        fluidfuel {
+            I:bio.ethanol=900
+            I:bio_diesel=600
+            I:biodiesel=600
+            I:coal=400
+            I:crude_oil=500
+            I:diesel=900
+            I:empoweredoil=700
+            I:ethanol=900
+            I:fire_water=1200
+            I:fluiddiesel=900
+            I:fluidnitrodiesel=1600
+            I:fuel=1500
+            I:gasoline=1200
+            I:ic2biogas=300
+            I:kerosene=1500
+            I:lava=200
+            I:lpg=1800
+            I:pyrotheum=3200
+            I:refined_biofuel=900
+            I:refined_fuel=1500
+            I:refined_oil=1000
+            I:rocket_fuel=3200
+        }
+
+    }
+
+    ##########################################################################################################
+    # recipes
+    #--------------------------------------------------------------------------------------------------------#
+    # Recipes Configurations
+    ##########################################################################################################
+
+    recipes {
+        B:spongeIronRecipeActive=true
+    }
+
+}
+
+
 options {
-    # Turn On/Off the manual item on first spawn (Default true) (WIP not working yet)
-    B:"start with manual"=true
-
-    # '0': Do damage only to monsters and only knockback players. '1': Do damage to monsters and player. '2': do only knockback to all living things. '3': do damage to all living things (Default 0)
-    I:"Electric Fence Damage Mode"=0
-
-    # The amount of damage the fence would cause (Default 2.0 '1 heart')
     D:"Electric Fence Damage Amount"=2.0
+    I:"Electric Fence Damage Mode"=0
+    B:"start with manual"=true
 }
 
 
 recipes {
-    # Turn On/Off the sponge iron recipe (Default true)
     B:spongeiron_recipe=true
 }
 
