--- a/config/InvTweaks/InvTweaks.cfg
+++ b/config/InvTweaks/InvTweaks.cfg
@@ -1,7 +1,7 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Mon Mar 18 02:06:35 CDT 2019
-enableMiddleClick=false
+#Wed Jul 17 19:57:21 CDT 2019
+enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
 enableAutoRefill=false
