--- a/config/T145/MetalChests.cfg
+++ b/config/T145/MetalChests.cfg
@@ -1,23 +1,21 @@
 # Configuration file
 
 general {
-    # Whether or not you want to recieve an in-game notification if an update is available.
+    # Whether or not chest container names are modelled after their block type ("Chest") or metal type ("Iron Chest")
+    B:archaicNaming=false
     B:checkForUpdates=true
     B:enableHungryMetalChests=true
-
-    # If Thaumcraft is installed, whether or not you want to enable the Metal Hungry Chests.
     B:enableMetalHungryChests=true
-
-    # If Refined Relocation 2 is installed, whether or not you want to enable the Metal Hungry Sorting Chests.
     B:enableMetalHungrySortingChests=true
-
-    # Whether or not you want to enable the Minecarts with Metal Chests.
     B:enableMinecarts=true
     B:enableSortingMetalChests=true
 
-    # Whether or not all metal chest models are like the vanilla chest; black in the middle.
+    # Whether or not all metal chest model textures are like the vanilla chest; black in the middle.
     # * Hollow textures contributed by phyne
     B:hollowModelTextures=true
+
+    # Whether or not the JSON config will be regenerated on mod update.
+    B:regenConfig=true
 }
 
 
