--- a/config/jei/bookmarks.ini
+++ b/config/jei/bookmarks.ini
@@ -1,2 +1,3 @@
+T:{id:"minecraft:diamond_axe",Count:1b,tag:{ench:[{lvl:3s,id:32s},{lvl:2s,id:34s},{lvl:1s,id:33s},{lvl:1s,id:38s}]},Damage:18s}
 T:{id:"minecraft:carrot",Count:1b,Damage:0s}
 T:{id:"minecraft:dye",Count:1b,Damage:15s}
