--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -58,6 +58,24 @@ world-1445915731 {
 }
 
 
+world-1517241819 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world-1517633832 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
 world-1553709931 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -118,6 +136,15 @@ world-1812204326 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=boat
+    B:overlayEnabled=true
+}
+
+
+world-1850068567 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
     B:overlayEnabled=true
 }
 
@@ -210,6 +237,24 @@ world-2016544853 {
 }
 
 
+world-2035051316 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world-204107099 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
 world-2052221675 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -254,6 +299,15 @@ world-21811201 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=rope
+    B:overlayEnabled=true
+}
+
+
+world-253263514 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@metalc wood to copper
     B:overlayEnabled=true
 }
 
@@ -450,6 +504,15 @@ world1026335353 {
 }
 
 
+world1088858542 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
 world1100985875 {
     B:bookmarkOverlayEnabled=false
     B:cheatItemsEnabled=true
@@ -601,17 +664,19 @@ world1582297286 {
 
 
 world1596008077 {
-    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
-
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=meal
+    S:filterText=@immersivee
+    B:overlayEnabled=true
+}
 
-    # Show the list of ingredients next to open GUIs.
+
+world1609488173 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=@botania
     B:overlayEnabled=true
 }
 
@@ -704,6 +769,15 @@ world1855637915 {
 }
 
 
+world194384280 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
 world2023564750 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -728,8 +802,26 @@ world2090571502 {
 }
 
 
+world210322435 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
 world2128809628 {
     B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world213455029 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
     B:editEnabled=false
     S:filterText=
     B:overlayEnabled=true
@@ -824,10 +916,29 @@ world388728918 {
 }
 
 
-world524375327 {
+world472321213 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world512517539 {
+    B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=false
     B:editEnabled=false
-    S:filterText=sieve
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world524375327 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=conveyor
     B:overlayEnabled=true
 }
 
@@ -881,9 +992,10 @@ world609009140 {
 
 
 world708701480 {
+    B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=@thermalf
+    S:filterText=rolling 
     B:overlayEnabled=true
 }
 
@@ -916,6 +1028,22 @@ world83573204 {
     B:cheatItemsEnabled=false
     B:editEnabled=false
     S:filterText=shur
+    B:overlayEnabled=true
+}
+
+
+world848214854 {
+    # Show the list of bookmarks next to open GUIs.
+    B:bookmarkOverlayEnabled=true
+
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=true
+
+    # Hide and unhide ingredients by clicking them in the list.
+    B:editEnabled=false
+    S:filterText=@metalches
+
+    # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
 }
 
