--- a/config/mystcraft/balance.cfg
+++ b/config/mystcraft/balance.cfg
@@ -522,6 +522,7 @@ baselining {
     I:"nuclearcraft:fluid_quartz_nak_0"=0
     I:"nuclearcraft:fluid_quartz_nak_hot_0"=0
     I:"nuclearcraft:fluid_radaway_0"=0
+    I:"nuclearcraft:fluid_radaway_slow_0"=0
     I:"nuclearcraft:fluid_redstone_nak_0"=0
     I:"nuclearcraft:fluid_redstone_nak_hot_0"=0
     I:"nuclearcraft:fluid_sic_vapor_0"=0
@@ -3221,6 +3222,11 @@ fluids {
     S:fluid.radaway.instability.factor_accessibility=
     S:fluid.radaway.instability.factor_flat=
     S:fluid.radaway.seabanned=
+    S:fluid.radaway_slow.cardrank=
+    S:fluid.radaway_slow.grammar=
+    S:fluid.radaway_slow.instability.factor_accessibility=
+    S:fluid.radaway_slow.instability.factor_flat=
+    S:fluid.radaway_slow.seabanned=
     S:fluid.redstone.cardrank=
     S:fluid.redstone.grammar=
     S:fluid.redstone.instability.factor_accessibility=
