--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -738,6 +738,7 @@ symbol {
         B:modmat_fluid_quartz_nak_0.enabled=false
         B:modmat_fluid_quartz_nak_hot_0.enabled=false
         B:modmat_fluid_radaway_0.enabled=false
+        B:modmat_fluid_radaway_slow_0.enabled=true
         B:modmat_fluid_redstone_nak_0.enabled=false
         B:modmat_fluid_redstone_nak_hot_0.enabled=false
         B:modmat_fluid_sic_vapor_0.enabled=false
