--- a/config/prodigy_tech.cfg
+++ b/config/prodigy_tech.cfg
@@ -55,6 +55,31 @@ machines {
     # The base amount of time (in ticks) that the Heat Accumulator takes to charge 20 ticks of an Heat Capacitor [range: 20 ~ 200, default: 30]
     I:capacitorChargerChargeTime=30
 
+    # A multiplier to the amount of time the Food Enricher takes to process an item
+    # Actual time varies heavily depending on the enriched food and how much it enriches
+    # but is always much higher than this value [range: 1 ~ 50, default: 20]
+    I:foodEnricherBaseTime=20
+
+    # The Food Enricher will not increase a food's food value beyond this amount (in half shanks) [range: 1 ~ 20, default: 20]
+    I:foodEnricherFoodCap=20
+
+    # How much does one Food Enricher operation increases the food value (in half shanks) [range: 1 ~ 20, default: 2]
+    I:foodEnricherFoodIncrease=2
+
+    # The Food Enricher will not increase a food's saturation ratio beyond this amount [range: 0.0 ~ 10.0, default: 1.2]
+    S:foodEnricherSaturationCap=1.2
+
+    # How much does one Food Enricher operation increases the saturation ratio [range: 0.0 ~ 2.0, default: 0.1]
+    S:foodEnricherSaturationIncrease=0.1
+
+    # The base amount of time (in ticks) that the Food Purifier takes to process an item, most will take much longer
+    # For reference, Beetroots take 2.2x that time, Rotten Flesh takes 4.8x and Steaks 20.8x [range: 1 ~ 300, default: 10]
+    I:foodPurifierBaseTime=10
+
+    # The base amount of time (in ticks) that the Fuel Processor takes to process a fuel that yields 1 Fuel Pellet
+    # Time for longer lasting fuels is derived from this value [range: 1 ~ 3000, default: 60]
+    I:fuelProcessorBaseTime=60
+
     # Automatically generate Heat Sawmill recipes to cut wood into planks
     # If false, only recipes for vanilla logs and zorra will be registered [default: true]
     B:heatSawmillAutoPlankRecipes=true
