--- a/config/oreveins.cfg
+++ b/config/oreveins.cfg
@@ -4,6 +4,9 @@ general {
     # Always create default ore_veins.json file if none if found.
     B:ALWAYS_CREATE_DEFAULT_CONFIG=true
 
+    # Try and avoid cutting off veins at the min / max of the range by not creating centers at the min / max of the y-range
+    B:AVOID_VEIN_CUTOFFS=true
+
     # Enables debug commands /clearworld, /veininfo, /reloadveins and /findveins
     B:DEBUG_COMMANDS=true
 
