Wild rats no longer break crops

--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -1033,7 +1033,6 @@ world83573204 {
 
 
 world848214854 {
-    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
 
     # Give items instead of showing the recipe.
@@ -1041,7 +1040,7 @@ world848214854 {
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=@metalches
+    S:filterText=chees
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
