--- a/config/rats.cfg
+++ b/config/rats.cfg
@@ -33,7 +33,7 @@ all {
     I:"Rat Upgrade Tick"=10
 
     # True if wild rats will destroy and eat crops [default: true]
-    B:"Rats Break Crops"=true
+    B:"Rats Break Crops"=false
 
     # True if rats can dig holes [default: true]
     B:"Rats Dig Holes"=true
