--- a/config/jei/bookmarks.ini
+++ b/config/jei/bookmarks.ini
@@ -1,3 +1,9 @@
-T:{id:"minecraft:diamond_axe",Count:1b,tag:{ench:[{lvl:3s,id:32s},{lvl:2s,id:34s},{lvl:1s,id:33s},{lvl:1s,id:38s}]},Damage:18s}
-T:{id:"minecraft:carrot",Count:1b,Damage:0s}
-T:{id:"minecraft:dye",Count:1b,Damage:15s}
+T:{id:"tconstruct:tooltables",Count:1b,Damage:0s}
+T:{id:"thermalfoundation:storage_alloy",Count:1b,Damage:2s}
+T:{id:"thermalfoundation:storage_alloy",Count:1b,Damage:0s}
+T:{id:"thermalfoundation:storage",Count:1b,Damage:5s}
+T:{id:"thermalfoundation:storage",Count:1b,Damage:4s}
+T:{id:"thermalfoundation:storage",Count:1b,Damage:3s}
+T:{id:"thermalfoundation:storage",Count:1b,Damage:2s}
+T:{id:"thermalfoundation:storage",Count:1b,Damage:1s}
+T:{id:"thermalfoundation:storage",Count:1b,Damage:0s}
