--- a/config/T145/TBone.cfg
+++ b/config/T145/TBone.cfg
@@ -4,13 +4,10 @@ general {
     # Whether or not you want to recieve an in-game notification if updates are available for all supported mods.
     B:checkForUpdates=true
 
-    # If a testing variant of shift-click crafting is enabled.
+    # Whether or not leaves decay fast (more efficient than Quick Leaf Decay).
+    B:decayLeavesQuickly=true
     B:experimentalShiftCrafting=true
-
-    # If the recipe book and all associated functionality are fully removed.
     B:removeRecipeBook=true
-
-    # If the furnace uses nbt-sensitive output matching.
     B:useStrictMatching=true
 }
 
