--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -136,6 +136,7 @@ symbol {
         B:biome70.enabled=true
         B:biome71.enabled=true
         B:biome72.enabled=true
+        B:biome73.enabled=true
         B:biome8.enabled=true
         B:biome9.enabled=true
         B:caves.enabled=true
