--- a/config/unidict/UniDict.cfg
+++ b/config/unidict/UniDict.cfg
@@ -41,7 +41,7 @@ general {
      >
 
     # keep only one entry per ore dict entry? [default: false]
-    B:keepOneEntry=true
+    B:keepOneEntry=false
 
     # enable this if you want the keepOneEntry blacklists to became whitelists.
     # Note: this doesn't applies for "S:keepOneEntryModBlackSet" [default: false]
@@ -231,6 +231,24 @@ resources {
         unidict:dustbronze_x4_size.4
         unidict:dustelectrum_x2_size.2
         unidict:ingotbronze_x4_size.4
+	"unidict:geariron_x9_shape. a aba a "
+	"unidict:geariron_x1_shape. a aba a "
+	"unidict:geargold_x9_shape. a aba a "
+	"unidict:geargold_x1_shape. a aba a "
+	"unidict:gearcopper_x9_shape. a aba a "
+	"unidict:gearcopper_x1_shape. a aba a "
+	"unidict:geartin_x9_shape. a aba a "
+	"unidict:geartin_x1_shape. a aba a "
+	"unidict:gearbronze_x9_shape. a aba a "
+	"unidict:gearbronze_x1_shape. a aba a "
+	"unidict:gearsilver_x9_shape. a aba a "
+	"unidict:gearsilver_x1_shape. a aba a "
+	"unidict:gearlead_x9_shape. a aba a "
+	"unidict:gearlead_x1_shape. a aba a "
+	"unidict:gearnickel_x9_shape. a aba a "
+	"unidict:gearnickel_x1_shape. a aba a "
+	"unidict:gearelectrum_x9_shape. a aba a "
+	"unidict:gearelectrum_x1_shape. a aba a "
      >
 
     # resources to be black-listed.
