--- a/config/unlimitedchiselworks.cfg
+++ b/config/unlimitedchiselworks.cfg
@@ -33,9 +33,11 @@ enabled {
     B:"quark:biome_cobblestone"=true
     B:"quark:biotite_block"=true
     B:"quark:duskbound_block"=true
+    B:"quark:elder_prismarine"=true
     B:"quark:midori_block"=true
     B:"quark:soul_sandstone"=true
     B:"quark:stained_planks"=true
+    B:"quark:world_stone_bricks"=true
     B:"rustic:painted_wood_black"=true
     B:"rustic:painted_wood_blue"=true
     B:"rustic:painted_wood_brown"=true
