Reduced Rats spawn weight

--- a/config/InvTweaks/InvTweaks.cfg
+++ b/config/InvTweaks/InvTweaks.cfg
@@ -1,7 +1,7 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Wed Jul 31 22:13:12 CDT 2019
-enableMiddleClick=true
+#Thu Aug 01 01:47:09 CDT 2019
+enableMiddleClick=false
 showChestButtons=true
 enableSortingOnPickup=false
 enableAutoRefill=false
