Enabled flat bedrock from CoFH World

--- a/config/InvTweaks/InvTweaks.cfg
+++ b/config/InvTweaks/InvTweaks.cfg
@@ -1,7 +1,7 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Thu Aug 01 01:47:09 CDT 2019
-enableMiddleClick=false
+#Thu Aug 01 13:15:29 CDT 2019
+enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
 enableAutoRefill=false
