--- a/config/jei/bookmarks.ini
+++ b/config/jei/bookmarks.ini
@@ -1,9 +1,4 @@
-T:{id:"tconstruct:tooltables",Count:1b,Damage:0s}
-T:{id:"thermalfoundation:storage_alloy",Count:1b,Damage:2s}
-T:{id:"thermalfoundation:storage_alloy",Count:1b,Damage:0s}
-T:{id:"thermalfoundation:storage",Count:1b,Damage:5s}
-T:{id:"thermalfoundation:storage",Count:1b,Damage:4s}
-T:{id:"thermalfoundation:storage",Count:1b,Damage:3s}
-T:{id:"thermalfoundation:storage",Count:1b,Damage:2s}
-T:{id:"thermalfoundation:storage",Count:1b,Damage:1s}
-T:{id:"thermalfoundation:storage",Count:1b,Damage:0s}
+T:{id:"forestry:fabricator",Count:1b,Damage:0s}
+T:{id:"tconstruct:cast_custom",Count:1b,Damage:3s}
+T:{id:"tconstruct:cast_custom",Count:1b,Damage:4s}
+T:{id:"bountiful:bountyboarditem",Count:1b,Damage:0s}
