--- a/config/Ender Folds.cfg
+++ b/config/Ender Folds.cfg
@@ -7,7 +7,11 @@
 ##########################################################################################################
 
 general {
+    # Forces destinations to always be indestructible.
     B:indestructibleDestinations=true
+
+    # Only allows one core to be extracted from a destination.
+    B:unqiueCores=true
 }
 
 
