--- a/config/IndustrialRenewal.cfg
+++ b/config/IndustrialRenewal.cfg
@@ -15,6 +15,9 @@ general {
         # The capacity of the barrel (Default 64000)
         I:barrelCapacity=64000
 
+        # The amount of FE/t a base solar panel can generate
+        I:baseSolarPanelMaxGeneration=15
+
         # The capacity of the Battery Bank (Default 1000000)
         I:batteryBankCapacity=1000000
 
@@ -48,8 +51,14 @@ general {
         # The number of hours the player will be offline before deactivating (default 2 days)
         I:hoursBeforeDeactivation=48
 
+        # How many hours will a blade last (default 48 hours)
+        I:ironBladeDurability=2880
+
         # The time in miliseconds the medkit will regenerate players hearth (Default 150)
         I:medKitEffectDuration=150
+
+        # How much the frame multiplies the solar panel generation contained in it
+        I:panelFrameMultiplier=2
 
         # If pumps will not consume the water (Default true)
         B:pumpInfinityWater=true
