--- a/config/T145/MetalChests.cfg
+++ b/config/T145/MetalChests.cfg
@@ -10,6 +10,11 @@ general {
     B:enableMinecarts=true
     B:enableSortingMetalChests=true
 
+    # Setting this to true will increment the registered data fixer version by one, forcing it to run on the next world load.
+    # Doing this is necessary after changing any inventory properties in the JSON config. Toggle this between true and false to force runs.
+    # The data fixer will always run on a complete mod update, or when moving a world from a development environment to production.
+    B:forceDataFixing=true
+
     # Whether or not all metal chest model textures are like the vanilla chest; black in the middle.
     # * Hollow textures contributed by phyne
     B:hollowModelTextures=true
