--- a/config/oreveins.cfg
+++ b/config/oreveins.cfg
@@ -29,6 +29,15 @@ general {
         LAPIS
         REDSTONE
      >
+
+    # This is a list of dimensions in which to stop vanilla / common modded ore generation calls. By default it is a blacklist.
+    # Note, this ONLY applies to stopped vanilla ores, veins have their own dimension config settings
+    I:STOPPED_ORES_DIMENSIONS <
+     >
+
+    # Should the list of dimensions to stop ores in be a whitelist?
+    # Note, this ONLY applies to stopped vanilla ores, veins have their own dimension config settings
+    B:STOPPED_ORES_DIMENSIONS_IS_WHITELIST=false
 }
 
 
