--- a/config/Lootbags_BagConfig.cfg
+++ b/config/Lootbags_BagConfig.cfg
@@ -27,10 +27,10 @@ $STARTBAG:lootbag_Machine:0
 		projectred-expansion:machine2:0:4:8:20
 		minecraft:piston:0:8:16:20
 		minecraft:sticky_piston:0:4:8:20
-		buildcrafttransport:pipe_diamond_item:0:2:4:20
-		buildcrafttransport:pipe_iron_item:0:32:64:20
+		buildcrafttransport:pipe_diamond_item:0:2:4:10
+		buildcrafttransport:pipe_iron_item:0:32:64:10
 		buildcrafttransport:pipe_gold_item:0:32:64:20
-		buildcrafttransport:pipe_clay_item:0:8:16:20
+		buildcrafttransport:pipe_clay_item:0:8:16:10
 		openblocks:tank:0:2:4:20
 		buildcrafttransport:pipe_wood_item:0:2:4:20
 		buildcraftcore:engine:0:2:4:20
@@ -71,6 +71,8 @@ $STARTBAG:lootbag_Machine:0
 		immersiveengineering:conveyor:0:2:4:10:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|96|-32|73|-50|-49|43|75|-83|-52|47|10|-87|44|72|101|-112|-55|-52|-51|77|45|42|-50|44|75|77|-51|75|-49|-52|75|77|45|-54|-52|75|-73|74|-83|40|41|74|76|46|97|0|0|-119|-127|16|125|49|0|0|0
 		minecraft:rail:0:32:64:20
 		minecraft:golden_rail:0:16:32:20
+		worsesolars:worse_solar_panel:0:2:4:5
+		immsersiveengineering:metal_device1:3:2:4:5
     $ENDWHITELIST
 $ENDBAG:lootbag_Machine
 $STARTBAG:lootbag_Redstone:1
