--- a/config/buildcraft/main.cfg
+++ b/config/buildcraft/main.cfg
@@ -4,6 +4,10 @@ display {
     # Should I enable colorblind mode?
     B:colorBlindMode=false
 
+    # If true then the architect table will correctly hide it's translucent parts behind surrounding terrain. (This looks better)
+    B:enableStencil=true
+    B:guideBookEnableDetail=false
+
     # Should all fluid values (Buckets, mB, mB/t) be hidden?
     B:hideFluidValues=false
 
@@ -13,6 +17,9 @@ display {
     # The rotation that items use when travelling through pipes. Set to 'enabled' for full rotation, 'disabled' for no rotation, or 'horizontals_only' to only rotate items when going horizontally.
     S:itemRenderRotation=enabled
     B:pipes.fluidColourIsBorder=false
+
+    # If true then the quarry frame will move with both of its axis rather than just one.
+    B:quarryFrameMoveBoth=false
 
     # When false laser beams will not be visible while transmitting power without wearing Goggles
     B:renderLaserBeams=true
@@ -51,6 +58,7 @@ experimental {
 
 
 general {
+    I:bptStoreExternalThreshold=20000
     S:chunkLoadLevel=self_tiles
 
     # How long, in seconds, should items stay on the ground? (Vanilla = 300, default = 60)
@@ -78,8 +86,17 @@ general {
     # Should pumps consume water? Enabling this will disable minor optimisations, but work properly with finite water mods.
     B:pumpsConsumeWater=true
 
+    # The minimum height that all quarry frames must be. A value of 1 will look strange when it drills the uppermost layer.
+    I:quarryFrameMinHeight=4
+
     # How often, in ticks, should network update packets be sent? Increasing this might help network performance.
     I:updateFactor=10
+}
+
+
+internal {
+    # Use display.enableStencil instead of this!
+    B:force_disable_stencil=false
 }
 
 
@@ -107,19 +124,12 @@ worldgen {
     B:generateWaterSprings=true
 
     oil {
-        # Can oil blocks burn?
         B:can_burn=true
-
-        # Should any oil sprouts or lakes be generated at all?
         B:enable=true
-
-        # Biome registry names (e.g. 'minecraft:ocean','minecraft:plains') of biomes that should have GREATLY increased oil generation rates.
         S:excessiveBiomes <
             buildcraftenergy:oil_desert
             buildcraftenergy:oil_ocean
          >
-
-        # Biome registry names (e.g. 'minecraft:hell','minecraft:jungle') of biomes that should never generate oil.
         S:excludedBiomes <
             minecraft:plains
             minecraft:extreme_hills
@@ -198,52 +208,28 @@ worldgen {
             thaumcraft:magical_forest
             thaumcraft:eerie
          >
-
-        # If true then the excluded biomes list will be treated as a blacklist, otherwise it will be treated as a whitelist.
         B:excludedBiomesIsBlacklist=true
-
-        # Dimension ID's (e.g. '-1' for the nether,'1' for the end) of dimensions that should never generate oil.
         I:excludedDimensions <
             -1
             1
             43
          >
-
-        # If true then the excluded biomes list will be treated as a blacklist, otherwise it will be treated as a whitelist.
         B:excludedDimensionsIsBlacklist=true
-
-        # The rate of occurrence of oil wells.
         D:generationRate=1.0
-
-        # Biome registry names (e.g. 'minecraft:ocean','minecraft:hills') of biomes that should have slightly increased oil generation rates.
         S:surfaceDepositBiomes <
          >
 
         spawn_probability {
-            # The percentage probability of a large oil spawn
             D:large=0.04
-
-            # The percentage probability of a medium oil spawn
             D:medium=0.1
-
-            # The percentage probability of a small oil spawn
             D:small=2.0
         }
 
         spouts {
-            # Whether oil spouts are generated or not. The oil spring at the bottom of large lakes will still exist.
             B:enable=true
-
-            # The maximum height for large oil spouts
             I:large_max_height=20
-
-            # The minimum height for large oil spouts
             I:large_min_height=10
-
-            # The maximum height for small oil spouts
             I:small_max_height=12
-
-            # The minimum height for small oil spouts
             I:small_min_height=6
         }
 
