Disabled rats stealing items

--- a/config/rats.cfg
+++ b/config/rats.cfg
@@ -15,7 +15,7 @@ all {
     S:"Pied Piper Hat Drop Rate"=0.09
 
     # The weight of pied pipers in vanilla's spawn rate [range: 1 ~ 300, default: 6]
-    I:"Pied Piper Spawn Weight"=6
+    I:"Pied Piper Spawn Weight"=60
 
     # Rats will continue to breed in cages until there are this many rats in one cage block [range: 1 ~ 10000, default: 5]
     I:"Rat Cage Max Occupancy"=5
@@ -51,7 +51,7 @@ all {
     B:"Rats Spawn Like Monsters"=true
 
     # True if wild rats will steal from chests [default: true]
-    B:"Rats Steal From Chests"=true
+    B:"Rats Steal From Chests"=false
 
     # True if Pied Pipers are to spawn naturally [default: true]
     B:"Spawn Piper"=true
